Added some content and improved style.

--- a/src/index.html
+++ b/src/index.html
@@ -8,14 +8,11 @@ path: home
   <h1>
     Get started with
     <strong class="bg-clip-text text-transparent bg-gradient-to-r from-blue-500 to-purple-500">
-      quantum development
-    </strong>
+      quantum development</strong>.
   </h1>
 
   <p>
-    <abbr title="netlify cms, eleventy, alpine js & tailwind css">NEAT</abbr>
-    Starter Template. Get Started by editing.
-    <code class="bg-gray-100 text-blue-800 p-1">/index.njk</code>
+    Start your quantum journey today.
   </p>
 
   {% include "./_includes/partials/content.html" %}
