--- a/src/learn/index.html
+++ b/src/learn/index.html
@@ -4,15 +4,56 @@ layout: page
 
 <h1>Learn quantum development concepts and platforms</h1>
 
-<h2>Books</h2>
+<div class="w-full max-w-2xl grid grid-cols-1 lg:grid-cols-2 gap-4 my-8 px-4 lg:mx-0">
 
-<ul><a href="https://bit.ly/qsharp-book"><em>Learn Quantum Computing with Python and Q#</em></a></ul>
+    {% if quicklinks.learn %}
 
-<h2>Courses</h2>
+        {% for item in quicklinks.learn %}
+            <a href="{{item.url}}" class="p-5 border rounded border-gray-200 hover:border-purple-400">
+                <h3>{{item.title}}
+                    →</h3>
+                <p>{{item.desc}}</p>
+            </a>
+        {% endfor %}
 
-<ul></ul>
+    {% endif %}
 
-<h2>Articles</h2>
+</div>
 
-<!-- TODO: generate a posts-like list here. -->
-<ul></ul>
+<section class="mt-15">
+    {% set postslist = collections.learn %}
+
+    {% for post in postslist | reverse %}
+        <article class="my-8">
+            <h2 class="font-bold text-3xl text-gray-900 mb-2">
+                <a href="{{ post.url | url }}">
+                    {% if post.data.title %}
+                        {{ post.data.title }}
+                    {% else %}
+                        Untitled
+                    {% endif %}
+                </a>
+            </h2>
+            <p class="text-base leading-6 text-gray-500 mb-3">
+                <time>
+                    {{ post.date | readableDate }}
+                    by
+                    <a>{{ post.data.author }}</a>
+
+                </time>
+            </p>
+            {% if post.data.description %}
+                <p class="text-lg text-gray-500 mb-3">
+                    {{ post.data.description }}
+                </p>
+            {% endif %}
+
+            <p>
+                <a href="{{ post.url | url }}" class="text-indigo-500 font-bold text-lg">
+                    Read more →
+                </a>
+            </p>
+
+        </article>
+    {% endfor %}
+</section>
